# RTRRL-AAAI25

./: .dockerignore  .gitignore  AGENTS.md  README.md  logging_util.py  optimizers.py  ppo_baseline.py  pyproject.toml  rtrrl.py  rtrrl_fixed.py  sac_baseline.py
.aim/: run_metadata.sqlite
config/: ppo_halfcheetah_cgpax.yml  ppo_halfcheetah_mask_even_unroll10_lr1e-3.yml  ppo_halfcheetah_mask_even_unroll10_lr1e-3_nupb16.yml  ppo_halfcheetah_mask_even_unroll10_lr3e-3.yml  ppo_halfcheetah_official.yml  ppo_halfcheetah_official_batch1.yml  ppo_halfcheetah_official_batch8.yml  ppo_halfcheetah_official_mask_even.yml  ppo_halfcheetah_official_mask_even_batch128.yml  ppo_halfcheetah_official_mask_even_batch128_lr1e-4_entropy3e-3_clip0p2.yml  ppo_halfcheetah_official_mask_even_batch128_lr5e-4.yml  ppo_halfcheetah_official_mask_even_batch256.yml  ppo_halfcheetah_official_mask_even_batch256_entropy3e-3_clip0p2.yml  ppo_halfcheetah_official_mask_even_batch256_lr5e-4.yml  ppo_halfcheetah_official_mask_even_batch64.yml  ppo_halfcheetah_official_mask_even_batch64_lr1e-4_ent3e-3_clip0p2.yml  ppo_halfcheetah_official_mask_even_entropy1e-2.yml  ppo_halfcheetah_official_mask_even_entropy1p1e-2.yml  ppo_halfcheetah_official_mask_even_entropy1p25e-2.yml  ppo_halfcheetah_official_mask_even_entropy1p5e-2.yml  ppo_halfcheetah_official_mask_even_entropy2e-2.yml  ppo_halfcheetah_official_mask_even_entropy3e-3.yml  ppo_halfcheetah_official_mask_even_entropy5e-3.yml  ppo_halfcheetah_official_mask_even_entropy8e-3.yml  ppo_halfcheetah_official_mask_even_entropy9e-3.yml  ppo_halfcheetah_official_mask_even_lr1e-3.yml  ppo_halfcheetah_official_mask_even_unroll10.yml  ppo_halfcheetah_official_mask_even_unroll5.yml  ppo_halfcheetah_official_seed2.yml  ppo_halfcheetah_official_unroll10_updates4.yml  ppo_hc_026.yml  ppo_hc_027.yml  ppo_hc_028.yml  ppo_hc_029.yml  (+51 more)
(+2291 files in other folders)
