[project]
name = "rtrrl"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Pin JAX to the version the authors used. JAX 0.6+ removed the self-alias
    # `jax.jax` and changed array types, breaking the upstream code unmodified
    # (envs/wrappers.py uses jax.jax.tree.map; aim 3.28 can't track 0.6 arrays).
    "jax==0.5.0",
    "jaxlib==0.5.0",
    "flax>=0.10.2,<0.11",
    "plotly>=5.24.1,<6",
    "dacite>=1.8.1,<2",
    "simple-parsing>=0.1.6,<0.2",
    "distrax>=0.1.5,<0.2",
    "tqdm>=4.67.1,<5",
    "poethepoet>=0.31.1,<0.32",
    "gymnax>=0.0.8,<0.0.9",
    "brax>=0.10.4,<0.11",
    "optax>=0.2.2,<0.3",
    "pyhopper>=1.2.3,<2",
    "mujoco-mjx>=3.1.6,<4",
    "popjym @ git+https://github.com/EdanToledo/popjym.git",
    "flashbax>=0.1.2,<0.2",
    "aim==3.28.0",
    "wandb>=0.18,<0.20",
    "setuptools>=80.0.0,<81",
]

[tool.uv]
package = false

[tool.poe.tasks]
install_jax_cuda12 = "uv pip install \"jax[cuda12]==0.5.0\""
